--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.molkky'
+    namespace 'com.teskola.molkky'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.molkky"
+        applicationId "com.teskola.molkky"
         minSdk 16
         targetSdk 32
         versionCode 1
