uudet manager interfacet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,8 @@
         </activity>
         <activity
             android:name=".ChartActivity"
-            android:parentActivityName=".GameActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".GameActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -76,8 +76,8 @@
         </activity>
         <activity
             android:name=".SelectPlayersActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -96,6 +96,7 @@
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
