--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".FirebaseListenerActivity"
+            android:name=".DatabaseActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
