--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".DatabaseActivity"
+            android:name=".BaseActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
