--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28"
-        />
+        android:maxSdkVersion="28" />
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="false"/>
+        android:required="false" />
 
     <application
-        android:name="com.teskola.molkky.FirebaseApp"
+        android:name=".FirebaseApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -24,6 +23,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Molkky"
         tools:targetApi="31">
+        <activity
+            android:name=".FirebaseActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
@@ -86,7 +93,8 @@
         </activity>
         <activity
             android:name=".ScoreCardActivity"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".GameActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
